--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "3.4.0"
+    "version": "3.4.1"
+  },
+  "scripts": {
+    "deploy": "hexo clean && hexo g && aws s3 cp --recursive public s3://aerben.me --profile private --acl public-read"
   },
   "dependencies": {
-    "hexo": "^3.2.0",
-    "hexo-deployer-git": "^0.3.1",
+    "hexo": "^3.4.1",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-index": "^0.2.0",
