--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "aerben.me"
 subtitle: Alexander Erben's developer weblog
-description: Alexander Erben's weblog on software development
+description: Alexander Erben's weblog on software development.
 author: Alexander Erben
 language: English
 timezone: Europe/Berlin
@@ -25,11 +25,11 @@ render_drafts: false
 post_asset_folder: false
 relative_link: false
 future: true
-#highlight:
-#  enable: true
-#  line_number: true
-#  auto_detect: false
-#  tab_replace: null
+highlight:
+  enable: true
+  line_number: true
+  auto_detect: false
+  tab_replace: null
 default_category: uncategorized
 category_map: null
 tag_map: null
@@ -37,13 +37,9 @@ date_format: YYYY-MM-DD
 time_format: 'HH:mm:ss'
 per_page: 10
 pagination_dir: page
-theme: clexy
+theme: cactus-light
 name: aerben.me
-prism_plugin:
-  mode: 'preprocess'    # realtime/preprocess
-  theme: 'default'
-  line_number: false    # default false
-highlight:
-    enable: false
-
-
+nav:
+  Home: /
+  About: /about/
+  Writing: /archives/
