--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "version": "3.4.1"
   },
   "scripts": {
-    "deploy": "hexo clean && hexo g && aws s3 cp --recursive public s3://aerben.me --profile private --acl public-read"
+    "deploy": "hexo clean && hexo g && hexo deploy"
   },
   "dependencies": {
     "hexo": "^3.4.1",
     "hexo-browsersync": "^0.2.0",
+    "hexo-deployer-git": "^0.3.1",
     "hexo-generator-archive": "^0.1.5",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-feed": "^1.2.2",
