--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "aerben.me"
 subtitle: Alexander Erben's developer weblog
-description: Hi, my name is Alex and this is a blog about interesting things I stumbled upon while writing software. Feel free to drop me a message on a channel of your choice. Have fun!
+description: Welcome! My name is Alex and this is a blog about interesting things I stumbled upon while writing software. Feel free to drop me a message on a channel of your choice. Have fun browsing!
 author: Alexander Erben
 language: English
 timezone: Europe/Berlin
