--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "3.5.0"
+    "version": "3.7.1"
   },
   "scripts": {
     "deploy": "hexo clean && hexo g && hexo deploy && git add . && git commit -m'Publish theme' && git push"
   },
   "dependencies": {
-    "hexo": "^3.5.0",
+    "hexo": "^3.7.1",
     "hexo-deployer-git": "^0.3.1",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
@@ -19,7 +19,9 @@
     "hexo-renderer-ejs": "^0.3.0",
     "hexo-renderer-marked": "^0.3.2",
     "hexo-renderer-stylus": "^0.3.1",
-    "hexo-server": "^0.3.1",
-    "hexo-tag-fontawesome": "^1.0.0"
+    "hexo-server": "^0.3.2",
+    "hexo-tag-fontawesome": "^1.0.0",
+    "npm": "^6.2.0",
+    "npm-check-updates": "^2.14.2"
   }
 }
