--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "version": "3.7.1"
   },
   "scripts": {
-    "deploy": "hexo clean && hexo g && hexo deploy && git add . && git commit -m'Publish theme' && git push"
+    "deploy": "hexo clean && hexo g && hexo deploy && git add . && git commit -m'Publish' && git push"
   },
   "dependencies": {
     "hexo": "^3.7.1",
